<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.localetextstarter.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/nougat"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nougat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:layout_constraintStart_toEndOf="@id/product_image"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/date_label" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintTop_toTopOf="@+id/date_label"
        app:layout_constraintStart_toEndOf="@+id/date_label" />

    <TextView
        android:id="@+id/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/input_price"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/date_label"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="16sp"
        android:inputType="number"
        android:hint="@string/price_placeholder"
        app:layout_constraintStart_toEndOf="@+id/label_price"
        app:layout_constraintTop_toTopOf="@+id/label_price"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/label_price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_price_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_100_item"
        android:textSize="20sp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnCount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/item_price"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/label_price_100"
        app:layout_constraintStart_toEndOf="@id/label_price_100" />

</androidx.constraintlayout.widget.ConstraintLayout>
